pipelines/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: "Argo CD Notifications Demo"
    openshift.io/display-name: "Notifications Demo"
  labels:
    argocd.argoproj.io/managed-by: developer-gitops
  name: notifications-demo
