pipelines/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: rollout-app-el
  name: el-rollout-app
spec:
  port:
    targetPort: http-listener
  to:
    kind: Service
    name: el-rollout-app-el
    weight: 100
  wildcardPolicy: None
